--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser-arcade-physics.min.js"></script>
+    <script src="node_modules\phaser\dist\phaser-arcade-physics.js"></script>
     <script src="/app.js"></script>
 </head>
 <body>
